--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h2 {
     margin: 10px auto;
     box-sizing: border-box;
     margin: 0 auto;
+    font-family: 'Montserrat', sans-serif;
 }
 #restart {
     width: 200px;
